<resources>
    <string name="app_name">EntrePatas</string>
    <string name="app_login">Iniciar sesión</string>
    <string name="app_sigup">Ingresar</string>
    <string name="app_signup">Registrarme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alejandro Garcia</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_adopt">Perros en adopción</string>
    <string name="menu_request">Mis Solicitudes</string>
    <string name="menu_slideshow">Ubícanos</string>
    <string name="menu_callup">Llámanos</string>

    <string name="menu_register">Registrar Perro</string>
    <string name="menu_list">Gestión de Solicitudes</string>
    <string name="menu_statistics">Estadísticas</string>

    <string name="menu_settings">Configuración</string>
    <string name="menu_logoff">Cerrar sesión</string>

    <string name="title_register">Registro de Perro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- -->
    <string name="user_mail">Ingresa tu correo</string>
    <string name="user_password">Ingresa tu contraseña</string>
    <string name="user_repeat">Repite tu contraseña</string>
    <string name="login_forgot">¿Olvidaste tu contraseña?</string>

    <string name="user_name">Ingresa tu primer nombre.</string>
    <string name="user_firstname">Ingresa tu apellido paterno</string>
    <string name="user_cellphone">Ingresa tu número celular</string>

    <string name="app_register">Registrar</string>
    <string name="app_endup">Terminar solicitud</string>

    <string name="app_adopt_name">Ingresa su nombre</string>
    <string name="app_adopt_age">Ingresa su edad (años)</string>
    <string name="app_adopt_weight">Ingresa su peso (Kg.)</string>

    <string name="home_welcome">Bienvenido</string>
    <string name="home_line1">Nuestra misión es rescatar animales de la calle en pésimas condiciones, curarlos, esterilizarlos y darlos en adopción.</string>
    <string name="home_line2">Tenemos un albergue con capacidad para albergar un maximo de 85 perritos de manera adecuada según sus necesidades, sin tenerlos hacinados.</string>

    <string name="app_request_estado">Estado:</string>
    <string name="app_request_ok">Aprobado</string>

    <string name="app_requed_end">Para finalizar tu solicitud, por favor, sube la foto de tu nuevo mejor amigo/a. Gracias por tu apoyo.</string>
    <string name="app_end">Finalizar</string>
    <string name="app_photo">Tomar foto</string>

    <string name="app_aprobar">Aprobar</string>
    <string name="app_rechazar">Rechazar</string>
    <string name="app_confirm_request">Confirmar solicitud</string>
    <string name="app_detail_request">Solicitar adopción</string>

    <string name="app_detail_sexo">Sexo:</string>
    <string name="app_detail_peso">Peso:</string>
    <string name="app_detail_edad">Edad:</string>

    <string name="api_maps">AIzaSyBoIqw0uJPKiGQRaacIGeoi1La46OVlaNY</string>
    <string name="title_activity_maps">Map</string>

    <string name="app_btn_login">Iniciar sesión</string>
    <string name="app_contact">Contacto</string>
    <string name="app_telefono">Tel: (01) 351-0088</string>
    <string name="msg_token_fmt">Tel: (01) 351-0088</string>

    <!-- Mensaje -->
    <string name="msg_login_usuario">Por favor, ingrese su correo electrónico.</string>
    <string name="msg_login_password">La contraseña no puede ser vacío. Corregir.</string>
    <string name="msg_login_incorecto">Correo o contraseña, inválidos. Corregir.</string>
    <string name="msg_login_exito">Login exitoso.</string>

    <string name="msg_singup_exito">Registro exitoso</string>
    <string name="msg_singup_mail">Por favor, ingrese su correo electrónico.</string>
    <string name="msg_singup_valMail">El correo electrónico ingresado es incorrecto. Corregir.</string>
    <string name="msg_singup_password">La contraseña no puede ser vacío. Corregir.</string>
    <string name="msg_singup_repasswod">La segunda contraseña ingresada no puede ser vacía. Corregir.</string>
    <string name="msg_singup_valPass">Las contraseñas ingresadas deben ser las mismas. Corregir.</string>
    <string name="msg_singup_nombre">Por favor, ingrese su primer nombre.</string>
    <string name="msg_singup_apellido">Por favor, ingrese su apellido paterno.</string>
    <string name="msg_singup_telefono">Por favor, ingrese su número celular.</string>
    <string name="msg_singup_format_telefono">El número celular debe ser un valor numérico de 9 dígitos. Corregir.</string>

    <string name="msg_register_nombre">El nombre del perro no puede ser vacío. Corregir.</string>
    <string name="msg_register_sexo">Por favor, seleccione el sexo del perro.</string>
    <string name="msg_register_edad">La edad (en años) del perro ingresada es incorrecta. Corregir."</string>
    <string name="msg_register_peso">El peso (en kilogramos) del perro ingresado es incorrecto. Corregir.</string>
    <string name="msg_register_foto">Por favor, agregue una fotografía del perro.</string>
    <string name="msg_register_exito">Registro exitoso.</string>
    <string name="msg_register_fallo">Revisar los datos ingresados.</string>
    <!-- Error -->

    <string name="msg_error_ocurrio">Ocurrió un error inesperado, intentelo mas tarde.</string>

    <string name="internal_storage">Internal storage</string>
    <string name="label_NroSolicitud">N°  Solicitud:</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="titulo_confirmacion">Confirmación</string>
    <string name="titulo_finalizar_solicitud">Finalizar solicitud</string>
    <string name="mensaje_cerrar_sesion">¿Desea cerrar la sesión?</string>
    <string name="mensaje_confirmar_solicitud">¿Desea confirmar la solicitud?</string>
    <string name="mensaje_aprobar_solicitud">¿Desea aprobar la solicitud?</string>
    <string name="mensaje_rechazar_solicitud">¿Desea rechazar la solicitud?</string>
    <string name="mensaje_terminar_solicitud">¿Desea terminar la solicitud?</string>
    <string name="mensaje_registrar_perro">¿Desea registrar al perro?</string>
    <string name="mensaje_error_carga_foto">Debe cargar una fotografía antes de finalizar la solicitud.</string>
    <string name="mensaje_error_conexion">Problemas de conexión. Inténtelo de nuevo.</string>
    <string name="mensaje_solicitud_aprobada">Solicitud aprobada.</string>
    <string name="mensaje_solicitud_rechazada">Solicitud rechazada.</string>
    <string name="mensaje_solicitud_terminada">Solicitud finalizada exitosamente.</string>
    <string name="mensaje_solicitud_iniciada">Solicitud generada exitosamente.</string>
    <string name="mensaje_solicitud_confirmada">Solicitud confirmada exitosamente.</string>

    <string name="mensaje_cancelar_solicitud">Si retrocede se cancelará su solicitud.\n ¿Está seguro?</string>

    <string name="mensaje_procesando">Procesando...</string>
    <string name="mensaje_loading">Cargando...</string>
    <string name="mensaje_validar_credenciales">Validando Credenciales...</string>

    <!-- [END fcm_default_icon_string] -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">EntrePatas</string>


    <string name="app_configuration">Recibir notificaciones</string>
</resources>