<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SingupActivity">

    <include layout="@layout/layout_headboard" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_title"
                android:textStyle="bold"
                android:textColor="@color/co_brown"
                android:gravity="center"
                android:text="@string/app_signup" />

            <EditText
                android:id="@+id/et_singup_correo"
                android:layout_marginTop="30dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:hint="@string/user_mail"  />

            <EditText
                android:id="@+id/et_singup_password"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:password="true"
                android:maxLength="8"
                android:hint="@string/user_password"  />

            <EditText
                android:id="@+id/et_singup_repassword"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:password="true"
                android:maxLength="8"
                android:hint="@string/user_repeat"  />

            <EditText
                android:id="@+id/et_singup_nombre"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:hint="@string/user_name"  />
            <EditText
                android:id="@+id/et_singup_paterno"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:hint="@string/user_firstname"  />
            <EditText
                android:id="@+id/et_singup_telefono"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="9"
                android:hint="@string/user_cellphone"  />

            <LinearLayout
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:id="@+id/btn_singup_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_register" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>