<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_title"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/co_brown"
                android:text="@string/title_register" />

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/app_adopt_name"  />

            <Spinner
                android:id="@+id/spnn_gender"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layoutMode="clipBounds"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/app_adopt_age"  />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/app_adopt_weight"  />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_register"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="10dp">

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:id="@+id/btn_register_dog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_register" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>