<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/layout_headboard" />


        <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_title"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/co_brown"
            android:text="@string/app_login" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:layout_height="25dp"
                android:src="@drawable/ic_users"/>

            <EditText
                android:id="@+id/userTxt"
                android:layout_width="300dp"
                android:hint="@string/user_mail"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:layout_height="25dp"
                android:src="@drawable/ic_lock"/>

            <EditText
                android:layout_width="300dp"
                android:password="true"
                android:hint="@string/user_password"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content" >

            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.AppEntrePatas.Button"
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_btn_login" />


        </LinearLayout>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot"
            android:gravity="center"
            android:textColor="@color/co_blue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true" >

                <TextView
                    android:id="@+id/lbl_login_register"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/size_item"
                    android:text="@string/app_signup" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>