<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.request.EndFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/size_item"
            android:gravity="center"
            android:text="@string/app_requed_end" />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_add" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center" >

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btn_request_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_photo" />

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btn_request_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_end" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>