<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/detail_fragment"
    tools:context=".ui.request.DetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_detail"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_item"
                android:text="@string/app_detail_sexo" />

            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_item"
                android:text="@string/app_detail_peso" />

            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_item"
                android:text="@string/app_detail_edad" />

            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="bottom|center_horizontal"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:id="@+id/btn_detail_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_detail_request" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>