<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:minHeight="130dp"
    android:background="@color/co_brown"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/im_request"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:src="@drawable/ic_foto" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#B58D66">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_adopt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_request_estado"
                        android:textSize="@dimen/size_item"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginLeft="2dp"
                        android:layout_width="wrap_content"
                        android:background="@color/co_ok"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="2dp"
                            android:id="@+id/txt_state"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/size_item"
                            android:textColor="@color/co_ok"
                            android:text="@string/app_request_ok" />

                    </LinearLayout>


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:theme="@style/Theme.AppEntrePatas.Button"
                    android:id="@+id/btn_request_finalize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_endup" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>